# Snake_Game_RL

./: .gitignore  README.md  constants.py  main.py  model.py  pyproject.toml  snake.py  trainer.py  utils.py
model/: model.pth
