[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["IronMan2810 <haykk2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "2.0.0"
numpy = "^1.26.0"
pygame = "^2.5.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
